# zhunt-rs

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
benches/: zhunt.rs
benches/resources/: mtDNA.NC_012920.1.txt  random.txt
src/: lib.rs  py.rs
src/zhuntr/: dbzed.rs  engine.rs  mod.rs  nucleotide.rs
tests/: compare_implementations.rs
tests/resources/: HSV-1.NC_001806.2-crop.txt  HSV-1.NC_001806.2-crop.txt.Z-SCORE  chrY.NC_000024.10-crop.txt  chrY.NC_000024.10-crop.txt.Z-SCORE  make-references.sh  mtDNA.NC_012920.1.txt.Z-SCORE  random.txt  random.txt.Z-SCORE  short.txt  short.txt.Z-SCORE  test.txt  test.txt.Z-SCORE  zhunt-reference.c
