[package]
name = "zhuntr"
version = "0.0.3"
authors = ["Aleksandr Fedorov"]
edition = "2021"
description = "Z-Hunt(r) is a Rust port of the Z-Hunt algorithm for predicting the propensity of DNA to adopt a left-handed Z-DNA conformation."
readme = "README.md"
repository = "https://github.com/nucleohub/zhuntr"
license = "MIT"

[lib]
name = "zhuntr"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20.2", features = ["eyre"] }
itertools = "0.12.1"
eyre = "0.6.12"
