[project]
name = "zhuntr"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version", "description", "license", "authors", "readme", "repository"]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module"]
compatibility = "manylinux2014"
profile = "release"
